[package]
name = "grijalva-hackathon"
version = "0.1.0"
description = "Test for hackathon"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "grijalva_hackathon"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
